still not completed

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
      <link rel="stylesheet" href="portfolio.css">
      <!-- add favicon -->
      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+     <script src="portfolio.js" defer></script>
 </head>
 <body>
     <div class="container">
         <!-- header -->
          <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name"> Doe</p>
+                <p class="nav-name"> Arif Hussain</p>
                 <span>.</span>
             </div>
-            <div class="nav-menu" id="mynavmenu">
+            <div class="nav-menu" id="myNavMenu">
                 <ul class="nav-menu-list">
                     <li class="nav-list">
                         <a href="#home" class="nav-link active-link">Home</a>
@@ -58,7 +59,7 @@
                         <p>I'm <span class="typedtext"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, ex.</p>
+                        <p>A front end web developer.</p>
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn"> Hire me</button>
@@ -92,7 +93,7 @@
                     <div class="col">
                         <div class="about-info">
                             <h3> My name is</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In mollitia ut voluptates.</p>
+                            <p>Arif Hussain and I'm a front end web developer and I can help you build a website with the help of my skills like HTML, CSS, JavaScript, React, and Bootstrap.</p>
                             <div class="about-btn">
                                 <button class="btn">dowloan cv <i class="uil uil-import"></i> </button>
                             </div>
@@ -170,8 +171,8 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Get in touch <i class="uil uil-corner-rigth-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: example@gmail.com</p>
-                            <p><i class="uil uil-phone"></i> Phone: +123456789</p>
+                            <p><i class="uil uil-envelope"></i> Email: zakiriinguti@gmail.com</p>
+                            <p><i class="uil uil-phone"></i> Phone: +92 03482856527</p>
                         </div>
                     </div>
                     <div class="col">
@@ -193,21 +194,21 @@
           <!-- footer -->
            <footer>
             <div class="top-footer">
-                <p>arif</p>
+                <p>Arif Hussain</p>
             </div>
-            <div class="middel-footer">
+            <div class="middel-footer" id="footer">
                 <ul class="footer-menu">
                     <li class="footer-menu-list">
-                        <a href="#home">home</a>
+                        <a href="#home">Home</a>
                     </li>
                     <li class="footer-menu-list">
-                        <a href="#about">about</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="footer-menu-list">
-                        <a href="#Projects">projects</a>
+                        <a href="#Projects">Projects</a>
                     </li>
                     <li class="footer-menu-list">
-                        <a href="#contact">contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -218,7 +219,7 @@
                 <div class="icon"><i class="uil uil-github-alt"></i></div> 
             </div>
             <div class="bottom-footer">
-                <p> copyright <a href="#home" style="text-decoration: none;"> Doe</a> All Rights Reserved</p>
+                <p> copyright <a href="#home" style="text-decoration: none;">web application</a> All Rights Reserved</p>
             </div>
            </footer>
     </div>
@@ -227,6 +228,6 @@
     <!--SCROLL REVAL JS LINK-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- MAIN JS -->
-    <script src="portfolio.js"></script>
+ 
 </body>
 </html>
