--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="img">
-                        <img src="img2.jpg" alt="avatar" style="width: 500px; height: 500px; border-radius: 50%; margin-top: 90px;">
+                        <img src="img4.webp" alt="avatar" style="width: 500px; height: 500px; border-radius: 50%; margin-top: 90px;" id="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
