still not completed

--- a/index.html
+++ b/index.html
@@ -170,19 +170,23 @@
                 <div class="row">
                     <div class="col">
                         <div class="contact-info">
-                            <h2>Get in touch <i class="uil uil-corner-rigth-down"></i></h2>
+                            <h2 style="text-transform: uppercase;">Get in touch <i class="uil uil-corner-rigth-down"></i></h2>
                             <p><i class="uil uil-envelope"></i> Email: zakiriinguti@gmail.com</p>
                             <p><i class="uil uil-phone"></i> Phone: +92 03482856527</p>
                         </div>
                     </div>
+                    <!-- contact form -->
                     <div class="col">
-                        <div class="formcontrol">
+                        <div class="formcontrol" id="formcontrol" style="border: 5px solid teal;
+                        border-radius: 5px">
                             <div class="form-inputs">
-                                <input type="text" class="input-filed" placeholder="Name">
-                                <input type="email" class="input-filed" placeholder="Email">
+                                <input type="text" class="input-filed" placeholder="Name" style="color: black;">
+                                <input type="email" class="input-filed" placeholder="Email" style="color: black;">
+                                <input type="text" placeholder="+92" style="color: black;">
                             </div>
                             <div class="text-area">
-                                <textarea placeholder="Message"></textarea>
+                                <textarea placeholder="Message"style="margin: 9px 5px;
+        color: black;"></textarea>
                             </div>
                             <div class="form-button">
                                 <button class="btn">Send <i class="uil uil-message"></i></button>
