--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="img">
-                        <img src="img4.webp" alt="avatar" style="width: 500px; height: 500px; border-radius: 50%; margin-top: 90px;" id="avatar">
+                        <img src="img5.jpg" alt="avatar" style="width: 500px; height: 500px; border-radius: 50%; margin-top: 90px;" id="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -177,8 +177,7 @@
                     </div>
                     <!-- contact form -->
                     <div class="col">
-                        <div class="formcontrol" id="formcontrol" style="border: 5px solid teal;
-                        border-radius: 5px">
+                        <div class="formcontrol" id="formcontrol">
                             <div class="form-inputs">
                                 <input type="text" class="input-filed" placeholder="Name" style="color: black;">
                                 <input type="email" class="input-filed" placeholder="Email" style="color: black;">
