--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
                     <h1>Projects</h1>
                 </div>
                 <div class="project-container">
-                    <div class="project-box">
+                    <div class="project-box" onclick="location.href='completed.html'">
                         <i class="uil uil-briefcase-alt"></i>
                         <h3>completed</h3>
                         <label>15+ finished projects</label>
                     </div>
-                    <div class="project-box">
+                    <div class="project-box" onclick="location.href='clients.html'">
                         <i class="uil uil-users-alt"></i>
                         <h3>clients</h3>
                         <label>25+ happy clients</label>
                     </div>
-                    <div class="project-box">
+                    <div class="project-box" onclick="location.href='experience.html'">
                         <i class="uil uil-award"></i>
                         <h3>Experience</h3>
                         <label>5+ years experience</label>
@@ -175,24 +175,6 @@
                             <p><i class="uil uil-phone"></i> Phone: +92 03482856527</p>
                         </div>
                     </div>
-                    <!-- contact form -->
-                    <!-- <div class="col">
-                        <div class="formcontrol" id="formcontrol">
-                            <div class="form-inputs">
-                                <input type="text" class="input-filed" placeholder="Name" style="color: black;">
-                                <input type="email" class="input-filed" placeholder="Email" style="color: black;">
-                                <input type="text" placeholder="+92" style="color: black;">
-                            </div>
-                            <div class="text-area">
-                                <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="btn">Send <i class="uil uil-message"></i></button>
-                            </div>
-                        </div>
-                </div> -->
-
-
                 <div class="mycontact">
                     <h2>Get in touch</h2>
                     <form id="myform">
@@ -208,7 +190,6 @@
                         <button type="submit">Submit</button>
                     </form>
                 </div>
-
                 <!-- contact form end -->
               </section>
           </main>
